# mrfmsim-cli

./: CHANGELOG.rst  README.rst  pyproject.toml
mrfmsim_cli/: cli.py  configuration.py  job.py
tests/: conftest.py  test_cli.py  test_job.py
